Fixed banner z-index and analytics ID

--- a/frontend/src/pages/home-page/home-page.style.scss
+++ b/frontend/src/pages/home-page/home-page.style.scss
@@ -69,7 +69,7 @@
     text-align: center;
     top: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 9999;
 }
 
 .learn-more {
